--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 <div class="col-sm-6"><img class="card-img-top" src="img/hitesh.jpg" alt="Card image cap"></div>
                                 <div class="col-sm-6" style="background-color: #4a5560;">
                                     <div class="card-body mt-3 bg-dark">
-                                        <p class="card-text mb-3" style="color:#ddd;">My name is Hitesh Pant. <br> I am a freelance full-stack web-developer. <br><br> I am  currently pursuing Bachelor's in Technology in Computer science. <br>  </p> <br>
+                                        <p class="card-text mb-3" style="color:#ddd;">My name is Hitesh Pant. <br> I am an enthusiastic and young Computer science student currently in final year of Bachelor of Technology in Computer science Stream.<br><br> I am a fresher looking for an appropriate oppertunity to apply my knowledge and skills and to gain a proper exposure of rapidly growing IT world.<br>  </p> <br>
                                         <a href="#two"><button class="next_btn">DISCOVER MORE</button></a>
                                     </div>
                                 </div>
@@ -69,11 +69,11 @@
                         <h5>ACHIEVEMENTS</h5>
                         <div class="card w-100" style="width: 320px;">
                             <div class="row">
-                                <div class="col-sm-6"></div>
+                                <div class="col-sm-6"><img src="img/techy.jpg" width="200px;" style="margin-top: 20%;" alt="techy"></div>
                                 <div class="col-sm-6" style="background-color: #4a5560;">
                                     <div class="card-body mt-3 bg-dark">
-                                        <p class="card-text mb-3" style="color:#ddd;">My name is Hitesh Pant. <br> I am a freelance full-stack web-developer. <br><br> I am  currently pursuing Bachelor's in Technology in Computer science. <br>  </p> <br>
-                                        <a href="#two"><button class="next_btn">DISCOVER MORE</button></a>
+                                        <p class="card-text mb-3" style="color:#ddd;"><br> I have a hands-on working experience and knowledge of Web-development. <br><br> My Backend Technology stack includes Django Framework in Python, with relational databases MySQL and SQLite. <br><br> I use HTML, CSS, JavaScript, Bootstrap and Jquery as Frontend tools  </p> <br>
+                                        <a href="#three"><button class="next_btn">DISCOVER MORE</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -88,22 +88,34 @@
                         <hr>
                         <div class="card w-100" style="width: 320px;">
                             <div class="card-body mt-3 bg-dark">
-                                <div class="row connect">
-                                    <div class="col-sm-4"><img src="img/github.jpg"alt=""></div>
-                                    <div class="col-sm-8">github.com/panthitesh6410</div>
-                                </div><hr>
-                                <div class="row connect">
-                                    <div class="col-sm-4"><img src="img/gmail.jpg"alt=""></div>
-                                    <div class="col-sm-8">panthitesh6410@gmail.com</div>
-                                </div><hr>
-                                <div class="row connect">
-                                    <div class="col-sm-4"><img src="img/linkedin.jpg"alt=""></div>
-                                    <div class="col-sm-8">linkedin.com/</div>
-                                </div><hr>
-                                <div class="row connect">
+                                <a href="https://github.com/panthitesh6410">
+                                    <div class="row connect">
+                                        <div class="col-sm-4"><img src="img/github.jpg"alt=""></div>
+                                        <div class="col-sm-8">https://github.com/panthitesh6410</div>
+                                    </div>
+                                </a><hr>
+                                <a href="panthitesh6410@gmail.com">
+                                    <div class="row connect">
+                                        <div class="col-sm-4"><img src="img/gmail.jpg"alt=""></div>
+                                        <div class="col-sm-8">panthitesh6410@gmail.com</div>
+                                    </div>
+                                </a><hr>
+                                <a href="https://www.linkedin.com/in/hitesh-pant-714768154/">
+                                    <div class="row connect">
+                                        <div class="col-sm-4"><img src="img/linkedin.jpg"alt=""></div>
+                                        <div class="col-sm-8">https://www.linkedin.com/in/hitesh-pant-714768154/</div>
+                                    </div>
+                                </a><hr>
+                                <a href="https://www.instagram.com/panthitesh_6410/">
+                                    <div class="row connect">
+                                        <div class="col-sm-4"><img src="img/insta.jpg"alt=""></div>
+                                        <div class="col-sm-8">https://www.instagram.com/panthitesh_6410/</div>
+                                    </div>
+                                </a><hr>
+                                <!-- <div class="row connect">
                                     <div class="col-sm-4"><img src="img/quora.jpg"alt=""></div>
                                     <div class="col-sm-8">quora.com/</div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>  
                     </div>
