--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </section>
     <br><br>
-        <section class="container text-center" id="two">
+        <section class="container text-center mt-5" id="two">
             <!-- about -->
             <!-- achievements -->
             <!-- skills and languages -->
