--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 </div>
             </div>
         </section>
-    <br><br>
-        <section class="container text-center mt-5" id="two">
+    <br><br><br> <br>
+        <section class="container text-center" id="two">
             <!-- about -->
             <!-- achievements -->
             <!-- skills and languages -->
             <!-- social accounts links  -->
-            <br><br>
+            <br><br><br><br>
             <div class="container ">
                 <div class="back">
                     <div class="content text-center">
@@ -80,7 +80,7 @@
                         </div>  
                     </div>
                 </div>    
-            </div>
+            </div><br>
             <div class="container">
                 <div class="back">
                     <div class="content text-center">
