--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="menu" id="menu">
         <a href="#one"><div class="cover"><img src="img/home-icon.png" alt=""></div><br>        </a>
         <a href="#two"><div class="cover"><img src="img/about-icon.png" alt=""></div></a><br>
-        <a href="#three"><div class="cover"><img src="img/projects-icon.png" alt=""></div></a><br>
-        <a href="#four"><div class="cover"><img src="img/contact-icon.png" alt=""></div></a><br>
+        <a href="#four"><div class="cover"><img src="img/projects-icon.png" alt=""></div></a><br>
+        <a href="#three"><div class="cover"><img src="img/contact-icon.png" alt=""></div></a><br>
     </div>
 
     <div class="container-fluid">
