--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                                     <div class="card-body mt-3 bg-dark">
                                         <p class="card-text mb-3" style="color:#ddd;"><br> I have a hands-on working experience and knowledge of Web-development. <br><br> My Backend Technology stack includes Django Framework in Python, with relational databases MySQL and SQLite. <br><br> I use HTML, CSS, JavaScript, Bootstrap and Jquery as Frontend tools  </p> <br>
                                         <a href="#three"><button class="next_btn">DISCOVER MORE</button></a>
+                                        <br><br>
+                                        <a href="resume.pdf"><button class="next_btn">DOWNLOAD RESUME</button></a>
                                     </div>
                                 </div>
                             </div>
